minor description changes

--- a/ankidecks_description.html
+++ b/ankidecks_description.html
@@ -1,21 +1,13 @@
-<img src="https://i.imgur.com/tHnkat5.png">
-
-<img src="https://i.imgur.com/TDgRCTZ.png">
-
-<img src="https://i.imgur.com/N8hNJGH.png">
-
-<img src="https://i.imgur.com/88b5m5a.png">
-
-This deck uses the Wanikani method and data for the Kanji and Kanji-related Vocabulary from the Genki I 3rd Edition Book.
+This deck uses the Wanikani method and data for the kanji and kanji-related Vocabulary from the Genki I 3rd Edition Book.
 
 The vocabulary-decks use sound files from Wanikani.
 
-Each Lesson has 5 decks.
+Each Lesson has 5 decks:
 <ul>
     <li>0 Radicals: Radicals are the components of kanji and should be learned first. (Or ignored if you don't like leaning Radicals)</li>
     <li>1 Kanjis: These are the kanjis in the order Genki wants you to learn them.</li>
     <li>2 Vocabulary: This deck contains all the vocabulary that is listed with the kanji and marked as important and some more I deemed important.</li>
-    <li>3 Additional Vocabulary: This deck contains all the vocabulary from Wanikani that uses kanjis from this and previous lessons, but is not mentioned with the kanji in Genki.</li>>
+    <li>3 Additional Vocabulary: This deck contains all the vocabulary from Wanikani that uses kanjis from this and previous lessons, but is not mentioned with the kanji in Genki.</li>
     <li>4 Unimportant Vocabulary: This deck contains all the vocabulary that is not marked as important by Genki. Contains words with kanji not mentioned in previous lessons. Some of the vocabulary in this deck might appear in later decks (2 or 3).</li>
 </ul>
 
@@ -24,3 +16,13 @@ I recommend learning 0, 1 and 2 (and 3 if you have time).
 This deck was generated via python. Contributions welcome.
 
 Github link: <a href="https://github.com/mi-ael/genkikani" rel="nofollow">https://github.com/mi-ael/genkikani</a>
+
+Screenshots:
+
+<img src="https://i.imgur.com/tHnkat5.png">
+
+<img src="https://i.imgur.com/TDgRCTZ.png">
+
+<img src="https://i.imgur.com/N8hNJGH.png">
+
+<img src="https://i.imgur.com/88b5m5a.png">
