--- a/ankidecks_description.html
+++ b/ankidecks_description.html
@@ -26,3 +26,6 @@ Screenshots:
 <img src="https://i.imgur.com/N8hNJGH.png">
 
 <img src="https://i.imgur.com/88b5m5a.png">
+
+Changes:
+2021-08-01: Fixed vocabulary reading wrongfully being called Onyomi
