--- a/ankidecks_description.html
+++ b/ankidecks_description.html
@@ -28,4 +28,4 @@ Screenshots:
 <img src="https://i.imgur.com/88b5m5a.png">
 
 Changes:
-2021-08-01: Fixed vocabulary reading wrongfully being called Onyomi
+2021-08-01: Fixed vocabulary reading wrongfully being called Onyomi and fixed Kanji 市長 in lesson 11
