always use primary sound file

--- a/ankidecks_description.html
+++ b/ankidecks_description.html
@@ -29,3 +29,4 @@ Screenshots:
 
 Changes:
 2021-08-01: Fixed vocabulary reading wrongfully being called Onyomi and fixed Kanji 市長 in lesson 11
+2021-08-08: Always use primary reading as sound (eg. 一日 now uses the いちにち sound file instead of ついたち)
